--- a/deployment.yml
+++ b/deployment.yml
@@ -1,7 +1,7 @@
 apiversion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-deployemtn
+  name: myapp-deployment 
 spec: 
   replicas: 3
   selector:
