--- a/deployment.yml
+++ b/deployment.yml
@@ -8,7 +8,7 @@ spec:
     matchLabels:
       app: myapp
   template:
-    metdata:
+    metadata:
       name: myapp-pod 
       label: 
         app: myapp 
