--- a/service.yml
+++ b/service.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: myapp #in service selector should match watever deployment you have created
+    app: myapp1 #in service selector should match watever deployment you have created
   ports:
   - port: 80 #service port
     targetPort: 80 # container port
