--- a/service.yml
+++ b/service.yml
@@ -4,8 +4,8 @@ metadata:
   name: myapp-service
 spec:
   type: NodePort
-  selector:
-    app: myapp1 #in service selector should match watever deployment you have created
+  selector: #selector it for label or i can it is an match expression
+    app: myapp #in service selector should match watever deployment you have created
   ports:
   - port: 80 #service port
     targetPort: 80 # container port
