--- a/mysql-deployment.yml
+++ b/mysql-deployment.yml
@@ -23,7 +23,7 @@ spec: #inside your deployment we need to provide spec how this deployment api wi
             env:
               - name: MYSQL_ROOT_PASSWORD 
                 valueFrom:
-                  secretkeyRef:
+                  secretKeyRef:
                 #this two value come from mysqlsecret.yml 
                     name: my-db-secret #this is the name of the secret
                     key: db-password #data of the secret 
