--- a/mysql-deployment.yml
+++ b/mysql-deployment.yml
@@ -11,6 +11,8 @@ spec: #inside your deployment we need to provide spec how this deployment api wi
   selector: #the .spec.selector file define ho the deployment find which pod to manage. 
     matchLabels: #.spec.selector.matchlabel it is euqivalent to map ke,value. something called as match expression
       app: mysql 
+  strategy:
+    type: Recreate
   template: #container template deploy in three pod
     metadata:
       name: myapp-mysql   #using metadata name
