--- a/usermgmtwebapp.yml
+++ b/usermgmtwebapp.yml
@@ -26,7 +26,7 @@ spec: #inside your deployment we need to provide spec how this deployment api wi
                 name: mysql 
             env:
               - name: DB_HOSTNAME
-                value: mysql-deployment
+                value: mysql
               - name: DB_PORT
                 value: "3306"
               - name: DB_NAME 
