--- a/usermgmtwebapp.yml
+++ b/usermgmtwebapp.yml
@@ -18,7 +18,7 @@ spec: #inside your deployment we need to provide spec how this deployment api wi
       labels: 
         app: usermgmt-webapp  #this label should match with pod label. 
     spec: #we define container spec
-        initContainer:
+        initContainers:
           - name: init-db
             image: busybox:1.31
             command: ['sh', '-c', 'echo -e "Checking for the availability of MySQL Server deployment"; while ! nc -z mysql-service 3306; do sleep 1; printf "-"; done; echo -e "  >> MySQL DB Server has started";']      
