--- a/usermgmtwebapp.yml
+++ b/usermgmtwebapp.yml
@@ -27,7 +27,7 @@ spec: #inside your deployment we need to provide spec how this deployment api wi
                 name: mysql 
             env:
               - name: DB_HOSTNAME
-                value: "mysql"
+                value: 192.168.145.208
               - name: DB_PORT
                 value: "3306"
               - name: DB_NAME 
