--- a/02.pv-state.yml
+++ b/02.pv-state.yml
@@ -1,12 +1,21 @@
-apiVersion: v1 
+apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: task-pv-volume-state
+  name: vikki-pv-volume
 spec:
-  storageClassName: statestorage
   capacity:
-    storage: 10Gi #we are consuming 10gi of storage. but this is thin provisioning. 
-  accessModes: 
-      - ReadWriteOnce #readwritemany #read
-  hostPath:
-      path: /mnt/data1
+    storage: 1Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Delete
+  storageClassName: local-storage
+  local:
+    path: /mnt/data1 
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - kubernetes2
