--- a/03-pvc-state.yml
+++ b/03-pvc-state.yml
@@ -1,12 +1,11 @@
-apiVersion: v1 
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: task-pv-claim-state
+  name: vikki-pv-volume-claim
 spec:
   accessModes:
     - ReadWriteOnce
-    # we need to map pv with pvc so that pod can use the claim. 
-  storageClassName: statestorage #this is the name of the storage or resource provision by persistent volume
   resources:
     requests:
-      storage: 10Gi 
+      storage: 1Gi
+  storageClassName: local-storage
