--- a/02.pv-state.yml
+++ b/02.pv-state.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: vikki-pv-volume
+  name: pv-volume
 spec:
   capacity:
-    storage: 1Gi
+    storage: 10Gi
   accessModes:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Delete
@@ -15,7 +15,7 @@ spec:
     required:
       nodeSelectorTerms:
       - matchExpressions:
-        - key: kubernetes.io/hostname
+        - key: kubernetes.io/k8snode
           operator: In
           values:
           - kubernetes2
