--- a/03-pvc-state.yml
+++ b/03-pvc-state.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: vikki-pv-volume-claim
+  name: pv-volume-claim
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 10Gi
   storageClassName: local-storage
