--- a/quota-mem-eg/pod-hype.yml
+++ b/quota-mem-eg/pod-hype.yml
@@ -1,11 +1,11 @@
 apiVersion: v1 
 kind: Pod
 metadata:
-  name: quota-mem-cpu-demo
+  name: quota-mem-cpu-demo-1
  
 spec:
   containers:
-  - name: quota-mem-cpu-demo-ctd 
+  - name: quota-mem-cpu-demo-ctd-1
     image: nginx 
     resources:
       limits:
